# adv_mla_lab_1

./: .python-version  Makefile  README.md  pyproject.toml  requirements.txt
docs/: mkdocs.yml
docs/docs/: index.md
models/: ohe.joblib
notebooks/: 1_baseline.ipynb
