[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "adv_mla_lab_1"
version = "0.0.1"
description = "adv_mla_lab_1"
authors = [
  { name = "Dil" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.11.4"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["adv_mla_lab_1"]
force_sort_within_sections = true

[tool.poetry]
name = "your-project-name"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11.4"
pandas = "2.2.2"
jupyterlab = "4.2.3"
scikit-learn = "1.5.1"
